cmake_minimum_required(VERSION 3.13)
project(MyLeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyLeetCode main.cpp MyLeetCode.cpp MyLeetCode.h
        3Sum.cpp
        addAndSearchWord.hpp
        bestTimeToBuyAndSellStock.cpp
        bestTimeToBuyAndSellStockII.cpp
        bestTimeToBuyAndSellStockIII.cpp
        burstBalloons.cpp
        constructBinaryTreeFromInorderAndPostorderTraversal.cpp
        constructBinaryTreeFromPreorderAndInorderTraversal.cpp
        decodeString.cpp
        designCircularDeque.hpp
        evaluateReversePolishNotation.cpp
        findAllDuplicatesInAnArray.cpp
        findMinimumInRotatedSortedArray.cpp
        findMinimumInRotatedSortedArrayII.cpp
        firstMissingPositive.cpp
        fizzBuzz.cpp
        friendsOfAppropriateAges.cpp
        globalAndLocalInversions.cpp
        houseRobber.cpp
        implementQueueUsingStacks.hpp
        implementTrie.hpp
        insertDeleteGetRandomO1.hpp
        kthLargestElementInAnArray.cpp
        largestNumberAtLeastTwiceOfOthers.cpp
        linkedListCycle.cpp
        linkedListCycleII.cpp
        longestValidParentheses.cpp
        LRUCache.hpp
        majorityElement.cpp
        maximizeDistanceToClosestPerson.cpp
        maximumAverageSubarrayI.cpp
        maximumSubarray.cpp
        maximumSwap.cpp
        mergeKSortedLists.cpp
        mergeSortedArray.cpp
        mergeTwoSortedLists.cpp
        nextPermutation.cpp
        peakIndexInAMountainArray.cpp
        removeDuplicatesFromSortedArray.cpp
        removeDuplicatesFromSortedArrayII.cpp
        reverseLinkedList.cpp
        reverseLinkedListII.cpp
        reverseNodesInK-Group.cpp
        rotateList.cpp
        searchA2DMatrix.cpp
        searchInRotatedSortedArray.cpp
        searchInRotatedSortedArrayII.cpp
        searchInsertPosition.cpp
        setMatrixZeroes.cpp
        singleNumber.cpp
        slidingWindowMaximum.cpp
        sortArrayByParity.cpp
        sortArrayByParityII.cpp
        sortColors.cpp
        squaresOfASortedArray.cpp
        subarrayProductLessThanK.cpp
        swapNodesInPairs.cpp
        taskScheduler.cpp
        transformToChessboard.cpp
        triangle.cpp
        twoSum.cpp
        validParentheses.cpp
        )