cmake_minimum_required(VERSION 3.13)
project(MyLeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyLeetCode MyLeetCode.h DataStructureAndAlgorithm.h main.cpp
        1bitAnd2bitCharacters.cpp
        3Sum.cpp
        addAndSearchWord.hpp
        addToArrayFormOfInteger.cpp
        advantageShuffle.cpp
        allOneDataStructure.hpp
        bestSightseeingPair.cpp
        bestTimeToBuyAndSellStock.cpp
        bestTimeToBuyAndSellStockII.cpp
        bestTimeToBuyAndSellStockIII.cpp
        bestTimeToBuyAndSellStockIV.cpp
        binaryPrefixDivisibleBy5.cpp
        burstBalloons.cpp
        coinBonus.cpp
        combinationSum.cpp
        combinationSumII.cpp
        constructBinaryTreeFromInorderAndPostorderTraversal.cpp
        constructBinaryTreeFromPreorderAndInorderTraversal.cpp
        containerWithMostWater.cpp
        decodeString.cpp
        deepDarkFraction.cpp
        designCircularDeque.hpp
        escapeALargeMaze.cpp
        evaluateReversePolishNotation.cpp
        findAllDuplicatesInAnArray.cpp
        findMinimumInRotatedSortedArray.cpp
        findMinimumInRotatedSortedArrayII.cpp
        findPeakElement.cpp
        findPivotIndex.cpp
        findTheDuplicateNumber.cpp
        firstMissingPositive.cpp
        fizzBuzz.cpp
        flipStringToMonotoneIncreasing.cpp
        friendsOfAppropriateAges.cpp
        globalAndLocalInversions.cpp
        houseRobber.cpp
        imageSmoother.cpp
        implementQueueUsingStacks.hpp
        implementTrie.hpp
        insertDeleteGetRandomO1.hpp
        isSubsequence.cpp
        kthLargestElementInAnArray.cpp
        largestNumberAtLeastTwiceOfOthers.cpp
        lengthOfLongestFibonacciSubsequence.cpp
        linkedListCycle.cpp
        linkedListCycleII.cpp
        longestConsecutiveSequence.cpp
        longestContinuousIncreasingSubsequence.cpp
        longestValidParentheses.cpp
        LRUCache.hpp
        majorityElement.cpp
        maxAreaOfIsland.cpp
        maxChunksToMakeSorted.cpp
        maxChunksToMakeSortedII.cpp
        maximizeDistanceToClosestPerson.cpp
        maximumAverageSubarrayI.cpp
        maximumSubarray.cpp
        maximumSumOf3NonOverlappingSubarrays.cpp
        maximumSwap.cpp
        mergeKSortedLists.cpp
        mergeSortedArray.cpp
        mergeTwoSortedLists.cpp
        minCostClimbingStairs.cpp
        minimumDominoRotationsForEqualRow.cpp
        minimumIncrementToMakeArrayUnique.cpp
        minimumPathSum.cpp
        missingNumber.cpp
        myCalendarI.hpp
        naryTreePreorderTraversal.cpp
        nextPermutation.cpp
        nQueens.cpp
        numberOfMatchingSubsequences.cpp
        numberOfSubarraysWithBoundedMaximum.cpp
        pairsOfSongsWithTotalDurationsDivisibleBy60.cpp
        partitionArrayIntoDisjointIntervals.cpp
        pascalTriangle.cpp
        pascalTriangleII.cpp
        peakIndexInAMountainArray.cpp
        plusOne.cpp
        positionsOfLargeGroups.cpp
        programmableRobot.cpp
        randomPickIndex.hpp
        removeDuplicatesFromSortedArray.cpp
        removeDuplicatesFromSortedArrayII.cpp
        removeElement.cpp
        reverseLinkedList.cpp
        reverseLinkedListII.cpp
        reverseNodesInK-Group.cpp
        rotateImage.cpp
        rotateList.cpp
        searchA2DMatrix.cpp
        searchInRotatedSortedArray.cpp
        searchInRotatedSortedArrayII.cpp
        searchInsertPosition.cpp
        setMatrixZeroes.cpp
        singleElementInASortedArray.cpp
        singleNumber.cpp
        slidingWindowMaximum.cpp
        sortArrayByParity.cpp
        sortArrayByParityII.cpp
        sortColors.cpp
        spiralMatrixII.cpp
        squaresOfASortedArray.cpp
        subarrayProductLessThanK.cpp
        subarraySumEqualsK.cpp
        subarraySumsDivisibleByK.cpp
        subsets.cpp
        subsetsII.cpp
        swapNodesInPairs.cpp
        taskScheduler.cpp
        transformToChessboard.cpp
        triangle.cpp
        twoSum.cpp
        uniquePaths.cpp
        validParentheses.cpp
        validTriangleNumber.cpp

        linkedListRandomNode.hpp)